# ExceptionStack

./: .clang-format  .gitignore  .gitmodules  CMakeDefaultPresets.json  CMakeLists.txt  CMakePresets.json  Config.cmake.in  README.md  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt
src/main/cxx/Exceptions/: ExceptionsAPI.hpp  FileNotFoundException  FileNotFoundException.cpp  FileNotFoundException.hpp  IOException.cpp  IOException.hpp  IllegalArgumentException  IllegalArgumentException.cpp  IllegalArgumentException.hpp  IndexOutOfBoundsException  IndexOutOfBoundsException.cpp  IndexOutOfBoundsException.hpp  NullPointerException  NullPointerException.cpp  NullPointerException.hpp  RuntimeException  RuntimeException.cpp  RuntimeException.hpp
src/test/cxx/Exceptions/: SmokeTest.cpp  SmokeTest.hpp
